--- a/Project2/style.css
+++ b/Project2/style.css
@@ -63,12 +63,11 @@ h2 {
     margin-bottom: 20px;
 }
 
-p {
+p{
     font-size: 1.2em;
     color: #666;
     line-height: 1.6;
 }
-
 
 nav ul {
     list-style-type: none;
@@ -137,7 +136,9 @@ section h2 {
 }
 
 .card img {
-    max-width: 100%;
+    display: flex;
+    margin: 0 auto;
+    width: 200px;
     margin-bottom: 1em;
     border-radius: 10px;
 }
@@ -208,10 +209,19 @@ form button:hover {
 }
 
 
-footer {
+footer{
     background-color: #4da6ff;
-    color: white;
     text-align: center;
     padding: 1em 0;
     margin-top: 2em;
+}
+
+footer p{
+    color: white;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
+    cursor: auto;
 }
